# vqa_med

./: .gitignore  README.md  compare_models.py  download_dataset.py  evaluate.py  inference.py  main.py  pyproject.toml  train.py  vqamed-v1 (2).ipynb
notebooks/: train_colab.ipynb
vqamed/: __init__.py  config.py  dataset.py  decoder.py  encoders.py  fusion.py  metrics.py  model.py  training.py  visualization.py
